--- a/evt/lab2/css.css
+++ b/evt/lab2/css.css
@@ -1,35 +1,69 @@
-{
+
+* {
     margin: 0;
     padding: 0;
 }
 
 body {
     font-family: "Montserrat", sans-serif;
-    background-color: darkblue;
-    margin-left: 0px;
-    margin-right: 0px;
+    background: darkblue;
 }
 a {
     text-decoration: none;
 }
-
 
 .header {
     width: 100%;
     box-sizing: border-box;
 }
 
-.menu {
+.main{
 
-    margin-top: 40px;
+    height: 100%;
     width: 100%;
-    height: 105px;
-    background: #ffffff;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+
 
 }
 
-.menu img{
-    height: 40px;
+.center{
+    width: 100%;
+    height: 500px;
+}
+
+.under__center
+{
+    background: white;
+    width: 100%;
+    height: 200px;
+}
+
+.center img{
+    width: 100%;
+    height: 100%;
+
+}
+.menu__top {
+    margin-top: 25px;
+    width: 100%;
+    height: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #ffffff;
+    box-shadow: 0px 4px 7px rgba(129, 129, 129, 0.25);
+}
+
+.menu__down {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: cornflowerblue;
+    box-shadow: 0px 4px 7px rgba(129, 129, 129, 0.25);
 }
 
 .menu__logo {
@@ -41,16 +75,52 @@ a {
     letter-spacing: -0.015em;
     color: #05a88d;
 }
-.menu h2{
-  margin-left: 1100px;
-    font-size: 25px;
-padding-top: 35px;
+.menu__ul {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    margin-left: 80px;
+}
 
+.menu__ul__foot {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    margin-left: 10px;
+    margin-top: 20px;
+}
 
+.menu__ul img{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    margin-left: 200px;
 }
 
 
+.menu__ul h2 {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    margin-left: 700px;
+}
 
+.menu__ul p {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    margin-left: 160px;
+}
 
 .menu__link {
     font-weight: 300;
@@ -58,12 +128,15 @@ padding-top: 35px;
     line-height: 20px;
     letter-spacing: -0.015em;
     color: #000000;
-    margin-left: 200px;
+    margin-left: 40px;
 }
 .menu__link:hover {
     color: #05a88d;
 }
-
+.btn__ul {
+    display: flex;
+    align-items: center;
+}
 .menu__signup {
     display: flex;
     align-items: center;
@@ -83,4 +156,31 @@ padding-top: 35px;
     letter-spacing: -0.015em;
     color: #05a88d;
     padding: 0 70px;
+}
+
+.border1{
+    padding-top: 10px;
+    border: solid;
+    height: 200px;
+    width: 600px;
+}
+
+
+.menu__footer {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: cornflowerblue;
+    box-shadow: 0px 4px 7px rgba(129, 129, 129, 0.25);
+}
+
+.menu__ul__footer{
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    margin-left: 80px;
 }
