--- a/evt/lab2/css.css
+++ b/evt/lab2/css.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: "Montserrat", sans-serif;
-    background: darkblue;
+    background: white;
 }
 a {
     text-decoration: none;
@@ -14,16 +14,14 @@ a {
 
 .header {
     width: 100%;
-    box-sizing: border-box;
 }
+
+
 
 .main{
 
     height: 100%;
     width: 100%;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
 
 
 }
@@ -45,35 +43,34 @@ a {
     height: 100%;
 
 }
-.menu__top {
-    margin-top: 25px;
+.menu__top
+{
+    margin-top: 0px;
     width: 100%;
-    height: 90px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height: 60px;
     background: #ffffff;
-    box-shadow: 0px 4px 7px rgba(129, 129, 129, 0.25);
 }
 
 .menu__down {
     width: 100%;
     height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background: cornflowerblue;
-    box-shadow: 0px 4px 7px rgba(129, 129, 129, 0.25);
+
+}
+
+.top_top {
+    width: 100%;
+    height: 30px;
+    background: #173064;
+
 }
 
 .menu__logo {
     font-weight: 700;
     font-size: 24px;
     line-height: 29px;
-    display: flex;
-    align-items: center;
     letter-spacing: -0.015em;
-    color: #05a88d;
+
 }
 .menu__ul {
     display: flex;
@@ -82,6 +79,7 @@ a {
     justify-content: center;
     list-style: none;
     margin-left: 80px;
+
 }
 
 .menu__ul__foot {
@@ -92,6 +90,7 @@ a {
     list-style: none;
     margin-left: 10px;
     margin-top: 20px;
+    background: #173064;
 }
 
 .menu__ul img{
@@ -130,9 +129,11 @@ a {
     color: #000000;
     margin-left: 40px;
 }
+
 .menu__link:hover {
     color: #05a88d;
 }
+
 .btn__ul {
     display: flex;
     align-items: center;
