--- a/evt/lab2/css.css
+++ b/evt/lab2/css.css
@@ -8,8 +8,9 @@ body {
     font-family: "Montserrat", sans-serif;
     background: white;
 }
-a {
-    text-decoration: none;
+
+a{
+    color: white;
 }
 
 .header {
@@ -35,7 +36,7 @@ a {
 {
     background: white;
     width: 100%;
-    height: 200px;
+    height: 150px;
 }
 
 .center img{
@@ -73,7 +74,7 @@ a {
 
 }
 .menu__ul {
-    display: flex;
+    float: left;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -159,12 +160,20 @@ a {
     padding: 0 70px;
 }
 
+
+
 .border1{
-    padding-top: 10px;
-    border: solid;
-    height: 200px;
-    width: 600px;
+    height: 100px;
+    width: 650px;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 13px;
+    margin: 10px auto;
+    margin-left: 280px;
+    float: left;
 }
+
+
 
 
 .menu__footer {
