--- a/inis/lab3/css.css
+++ b/inis/lab3/css.css
@@ -216,30 +216,54 @@ a{
 
 
     width: 200px;
-    height: 300px;
-    border: 2px solid black;
-    margin: 10px;
+    height: 350px;
+    border: 5px solid black;
+    border-radius: 15px 15px 15px 15px;
+    margin: 40px;
     float: left;
     text-align: center;
+    overflow: hidden;
 
 }
 
 #out{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+   justify-content: center;
+    width: 1000px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 
 }
 
 
 img{
-    width: 170px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
 }
 
 button{
-    width: 70px;
+    background-color: #173064;
+    color: white;
+    width: 80px;
     height: 40px;
     margin-left: 10px;
+    margin-top: 20px;
+    border-radius: 8px 8px 8px 8px;
 }
 
+h4{
+
+    margin-top: 10px;
+    color: #173064;
+}
+
+#count{
+
+    font-size: 14px;
+    margin-top: 10px;
+
+}
