--- a/inis/lab3/css.css
+++ b/inis/lab3/css.css
@@ -267,3 +267,43 @@ h4{
     margin-top: 10px;
 
 }
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0,0.8);
+
+}
+
+.modal-content{
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 1000px;
+    width: 1000px;
+
+}
+
+.close{
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+
+}
+
+
+
+
+
+
+
+
